@@ -2,8 +2,8 @@ Package: maxlike
 Type: Package
 Title: Model Species Distributions by Estimating the Probability of
         Occurrence Using Presence-Only Data
-Version: 0.1-10
-Date: 2023-9-17
+Version: 0.1-11
+Date: 2024-3-18
 Depends: R (>= 2.10.0), raster
 Suggests: dismo
 Author: Richard Chandler, Andy Royle and Roeland Kindt
@@ -12,6 +12,6 @@ Description: Provides a likelihood-based approach to modeling species distributi
 License: GPL (>= 3)
 LazyLoad: yes
 NeedsCompilation: no
-Packaged: 2023-09-17 13:24:13 UTC; RKINDT
+Packaged: 2024-03-18 14:49:43 UTC; RKINDT
 Repository: CRAN
-Date/Publication: 2023-09-17 22:50:11 UTC
+Date/Publication: 2024-03-19 08:10:06 UTC
