@@ -1,8 +1,8 @@
-92527a9df1929bbdf8167b622513410d *DESCRIPTION
+197f2b62868c2d8b58e8de37f3eb79de *DESCRIPTION
 19447747355fa702b2067e8f3b38e5db *NAMESPACE
-ad02aba9c00023780fbbb41bb1c9e44d *NEWS
+62efe6db54eca277c9528619870b2e93 *NEWS
 ff5fd3073044462ee66c38039121205d *R/fmMethods.R
-c5f4f70e245f3cda9ea054b1b9705ec0 *R/maxlike.R
+b6c30cf568b91fd4ccf18cb4a5a00bd7 *R/maxlike.R
 addb5f2a4e4e2b8c3fe1bb7d4e959270 *data/MaungaWhau.rda
 a63f9568052caf57e251cfc96ccd6f83 *data/carw.rda
 ffeaeb9a6d086e6560f48d6d4c91b2c0 *inst/CITATION
